Fix notifications panel alignment on mobile

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -27,6 +27,7 @@ body > #root {
 
 .root-blur {
   filter: blur(5px);
+  overflow-x: clip;
 }
 
 * {
